--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "sourceMap": true,
         "rootDir": "src",
         "strict": false,
-        "noUnusedLocals": true
+        "noUnusedLocals": true,
+        "resolveJsonModule": true
     },
     "exclude": [
         "node_modules",
